<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Curve</string>
    <string name="curve_logo">Logo Curve</string>
    <string name="sign_in">Se connecter</string>
    <string name="no_account">Pas encore de compte ?</string>
    <string name="sign_up">S\'inscrire</string>
    <string name="name">Nom</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="first_last_name">Prénom et nom</string>
    <string name="remember_me">Se souvenir de moi</string>
    <string name="forgot_password">Mot de passe oublié</string>
    <string name="teacher">Professeur</string>
    <string name="Student">Étudiant</string>
    <string name="Students">Étudiants</string>
    <string name="teacher_logo">Logo du professeur</string>
    <string name="student_logo">Logo de l\'étudiant</string>
    <string name="title_activity_main_student">MainStudentActivity</string>
    <string name="title_home">Accueil</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="classes">Classes</string>
    <string name="title_activity_main_teacher">MainTeacherActivity</string>
    <string name="search">Recherche</string>
    <string name="profile">Profil</string>
    <string name="enter_email_address">Entrer l\'adresse mail</string>
    <!--Shared  Preferences-->
    <string name="auth_preferences_file">com.mgl7130.curve.Auth_Preferences</string>
    <string name="auth_preferences_remember_me">REMEMBER_ME</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_password">Entrer mot de passe</string>
    <string name="password_too_short">Mot de passe trop court, minimum 6 caractères !!</string>
    <string name="auth_failed">Échec de l\'authentification</string>
    <string name="first_name_teacher">Prénom</string>
    <string name="teacher_family_name">Nom</string>
    <string name="teacher_birth_date">Date de Naissance</string>
    <string name="class_subject">Sujet du cours</string>
    <string name="class_level">Niveau du cours</string>
    <string name="create_class">Créer un nouveau cours</string>
    <string name="create_class_button">Créer le nouveau cours</string>
    <string name="class_date">Date  du cours :</string>
    <string name="class_start_time">De</string>
    <string name="class_end_time">à</string>
    <string name="set_class_date">Sélectionnez la date du cours</string>
    <string name="set_class_start_time">Sélectionnez l\'heure de début du cours</string>
    <string name="select_date_error">Veuillez renseigner la date du cours</string>
    <string name="select_startHour_error">Veuillez renseigner l\'heure de début du cours</string>
    <string name="select_endHour_error">Veuillez renseigner l\'heure de fin du cours</string>
    <string name="teacher_profile_save" tools:ignore="ExtraTranslation">Ok</string>
    <string name="from">De :</string>
    <string name="to">à :</string>
    <string name="message_no_results">Aucun résultat trouvé</string>
    <string name="level">Niveau :</string>
    <string name="no_student">Pas encore d\'étudiants</string>
    <string name="edit_class">Modifier le cours</string>
    <string name="edit_class_button">Modifier le cours</string>

    <string name="teacher_no_firstname">Veuillez renseigner un prénom</string>
    <string name="teacher_no_profile_picture">Veuillez renseigner une photo de profil</string>
    <string name="teacher_no_family_name">Veuillez renseigner un nom</string>
    <string name="teacher_no_date_birth">Veuillez renseigner une date de naissance</string>
    <string name="teacher_unable_get_profile_picture">Impossible de récupérer la photo de profil</string>
    <string name="teacher_no_description">Veuillez renseigner une description</string>
    <string name="teacher_description">Description</string>

    <string name="first_name_student">Prénom</string>
    <string name="student_family_name">Nom</string>
    <string name="student_birth_date">Date de Naissance</string>
    <string name="student_description">Description</string>
    <string name="student_profile_save">Ok</string>


    <string name="student_no_firstname">Veuillez renseigner un prénom</string>
    <string name="student_no_profile_picture">Veuillez renseigner une photo de profil</string>
    <string name="student_no_family_name">Veuillez renseigner un nom</string>
    <string name="student_no_date_birth">Veuillez renseigner une date de naissance</string>
    <string name="student_unable_get_profile_picture">Unable to retrieve profile picture</string>
    <string name="student_no_description">Veuillez renseigner une description</string>
    <string name="switch_profile_student">Changer pour étudiant</string>
    <string name="switch_profile_teacher">Changer pour professeur</string>
    <string name="sign_out">Déconnexion</string>
    <string name="all_classes">Tous les cours</string>
    <string name="sorted_by_date">Trié par date</string>
    <string name="sorted_by_level">Trié par niveau</string>
    <string name="sorted_by_subject">Trié par matière</string>
    <string name="sort_by_date">Trier par date</string>
    <string name="sort_by_subject">Trier par matière</string>
    <string name="sort_by_level">Trier par niveau</string>
    <string name="cancel">Annuler</string>
    <string name="apply">Appliquer</string>
    <string name="header_filters">Filtrer</string>
    <string name="value_any_category">Toutes les catégories</string>
    <string name="value_any_city">Tous niveaux</string>
    <string name="value_any_subject">Toutes matières</string>
    <string name="value_any_date">Toutes dates</string>
    <string name="value_any_level">Tous niveaux</string>
    <string name="participate">Participer au cours</string>
    <string name="confirm_paticipation">Participer au cour</string>
    <string name="confirm_paticipation_question">Voulez-vous vraiment participer au cours ?</string>
    <string name="confirm_participate">Participer</string>
    <string name="title_class_list">Classes</string>
    <string name="title_class_detail">Class Detail</string>
    <string name="firstname">Prénom</string>
    <string name="age" >Age</string>
    <string name="teacher_unable_get_student_picture">Impossible de recuperer la photo de l\'etudiant</string>
    <string name="subject_missing">Vous devez choisir un sujet</string>
    <string name="level_missing">Vous devez choisir un niveau</string>
    <string name="date_missing">Vous devez choisir la date du cours</string>
    <string name="start_time_missing">Vous devez choisir une heure de debut</string>
    <string name="end_time_missing">Vous devez choisir l\'heure de fin</string>
    <string name="error_date_format">Erreur dans le format de la date</string>
    <string name="error_start_time_format">Erreur dans le format de l\'heure</string>
    <string name="error_end_time_format">Erreur dans le format de l\'heure de fin</string>
    <string name="error_format_invalid">Format invalide</string>
    <string name="error_too_short">Trop court</string>
    <string name="error_must_fill">Ce champ ne peut etre vide</string>
    <string name="creating_user">Creation du compte ...</string>
    <string name="user_created">Compte créé !</string>
    <string name="error_creating_user" />
    <string name="channel_name">Nouvel etudiant</string>
    <string name="channel_description">Ce channel contient les notifications de nouveaux etudiant</string>
    <string name="new_student">Vous avez un nouvel etudiant</string>
    <string name="modification_profile_user">Mise à jour du profil...</string>
    <string name="permission_text">Autocomplétion des emails</string>


</resources>
