<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.auth.ProfileChoiceActivity">

    <Button
        android:id="@+id/button_teacher"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:elevation="0dp"
        android:text="@string/teacher"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView_teacher"
        app:layout_constraintStart_toStartOf="@+id/imageView_teacher"
        app:layout_constraintTop_toBottomOf="@+id/imageView_teacher" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="373dp"
        app:layout_constraintGuide_percent=".25" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="373dp"
        app:layout_constraintGuide_percent=".75" />

    <Button
        android:id="@+id/button_student"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/Student"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView_student"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toStartOf="@+id/imageView_student"
        app:layout_constraintTop_toBottomOf="@+id/imageView_student" />

    <ImageView
        android:id="@+id/imageView_teacher"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/teacher_logo"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".2"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:srcCompat="@drawable/ic_teacher" />

    <ImageView
        android:id="@+id/imageView_student"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/student_logo"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:srcCompat="@drawable/ic_student" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="199dp"
        app:layout_constraintGuide_percent=".5" />
</android.support.constraint.ConstraintLayout>