<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.AuthentificationChoiceActivity">

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="263dp"
        android:background="@drawable/sign_in_button"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.519" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="97dp"
        app:layout_constraintBottom_toTopOf="@+id/button_sign_up"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/curvre_logo" />

    <TextView
        android:id="@+id/textView_no_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="306dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_up"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/no_account" />

    <TextView
        android:id="@+id/textView_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="306dp"
        android:text="TextView"
        android:textColor="@color/color_purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_no_account"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_up"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/sign_up" />


</android.support.constraint.ConstraintLayout>