<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="25dp">

        <EditText
            android:id="@+id/teacher_first_name"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/first_name_teacher"
            android:inputType="textPersonName"
            android:backgroundTint="@color/color_purple"
            android:textColor="@color/color_purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_picture_cardView" />

        <EditText
            android:id="@+id/teacher_family_name"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/teacher_family_name"
            android:backgroundTint="@color/color_purple"
            android:textColor="@color/color_purple"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teacher_first_name" />

        <EditText
            android:id="@+id/teacher_birth_date"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:backgroundTint="@color/color_purple"
            android:textColor="@color/color_purple"
            android:hint="@string/teacher_birth_date"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teacher_family_name" />

        <android.support.v7.widget.CardView
            android:id="@+id/profile_picture_cardView"
            android:layout_width="168dp"
            android:layout_height="168dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/teacher_profile_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/teacher_avatar" />
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/button_save_teacher"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/sign_in_button"
            android:text="@string/teacher_profile_save"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teacher_description" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/edit_profile_teacher_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            app:backgroundTint="@color/color_purple"
            app:backgroundTintMode="src_in"
            app:layout_constraintBottom_toTopOf="@+id/teacher_first_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profile_picture_cardView"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="@color/color_blue"
            app:srcCompat="@android:drawable/ic_menu_edit" />

        <EditText
            android:id="@+id/teacher_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:backgroundTint="@color/color_purple"
            android:textColor="@color/color_purple"
            android:hint="@string/teacher_description"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toTopOf="@+id/button_save_teacher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teacher_birth_date"
            app:layout_constraintVertical_bias="0.166" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>