<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.auth.AuthentificationChoiceActivity">

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/sign_in_button"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="21sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        tools:text="@string/sign_in" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="49dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/curve_logo" />

    <TextView
        android:id="@+id/textView_no_account"
        android:layout_width="153dp"
        android:layout_height="34dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="306dp"
        android:text="@string/no_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_in"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/no_account" />

    <TextView
        android:id="@+id/textView_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="306dp"
        android:text="@string/sign_up"
        android:textColor="@color/color_purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_no_account"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_in"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/sign_up" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />


</android.support.constraint.ConstraintLayout>